Replaced about-text lorem ipsum with real text.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
       </h1>
 
       <p class="about-text">
-        Hi! I'm Manuel. How are you doing? Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Hi! I'm Manuel. How are you doing? I love all sides of programing web
+        apps, from the backend, to frontend and testing. I've done each. I
+        believe in being able to build all parts of an application in order to
+        fully understand how it works.<br /><br />In my free time I enjoy reading,
+        running and photography.
       </p>
     </section>
     <section id="skills">
@@ -38,7 +39,7 @@
           <h3>Front-end</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
         </div>
       </div>
@@ -50,7 +51,7 @@
           <h3>Back-end</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
         </div>
       </div>
@@ -62,7 +63,7 @@
           <h3>Testing</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
         </div>
       </div>
