Replaced frontend skill text lorem ipsum with real text.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         Hi! I'm Manuel. How are you doing? I love all sides of programing web
         apps, from the backend, to frontend and testing. I've done each. I
         believe in being able to build all parts of an application in order to
-        fully understand how it works.<br /><br />In my free time I enjoy reading,
-        running and photography.
+        fully understand how it works.<br /><br />In my free time I enjoy
+        reading, running and photography.
       </p>
     </section>
     <section id="skills">
@@ -38,8 +38,10 @@
         <div class="skill-text-section">
           <h3>Front-end</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            I've worked with HTML, CSS, Bootstrap, JS, React, Fontawesome and
+            other technologies. I've created both personal and certification
+            projects using all these tools. I've also created my own
+            Bootstrap-like library usingn only CSS.
           </p>
         </div>
       </div>
