Replaced backend skill text lorem ipsum with real text.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
         <div class="skill-text-section">
           <h3>Back-end</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            I've done projects in Python, Django, Django-rest-framework and use
+            these to make apps like the Expense Tracker, Motivation Vault and
+            Media Ratings.
           </p>
         </div>
       </div>
