Replaced testingd skill text lorem ipsum with real text.

--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
         <div class="skill-text-section">
           <h3>Testing</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            My software developement journey began with testing. I have years of
+            experience as QA of a variety of applications whether web pages, web
+            applications and video games. I have also extensive experience on
+            creating test suites for web pages and web applications, automating
+            testing processes and creating function, UI, API, and Visual tests.
           </p>
         </div>
       </div>
