Added expense tracker name and link to projects

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
       <h1 class="projects-heading">My Projects</h1>
       <div class="projects-grid">
         <div class="project-tile">
-          <a href=""
+          <a href="https://github.com/manuel12/django-expense-tracker-public"
             ><img src="images/landing-page.png" />
             <div class="project-name">
-              <p>Project 1</p>
+              <p>Expense Tracker</p>
             </div>
           </a>
         </div>
