--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href=""
+          <a href="https://github.com/manuel12/django-api-react"
             ><img src="images/landing-page.png" />
             <div class="project-name">
-              <p>Project 2</p>
+              <p>Motivation Vault</p>
             </div>
           </a>
         </div>
