Added media ratings name and link to projects

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href=""
+          <a href="https://github.com/manuel12/media-ratings"
             ><img src="images/landing-page.png" />
             <div class="project-name">
-              <p>Project 3</p>
+              <p>Media Ratings</p>
             </div>
           </a>
         </div>
