--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href=""
+          <a href="https://github.com/manuel12/css-styles-showcase"
             ><img src="images/landing-page.png" />
             <div class="project-name">
-              <p>Project 4</p>
+              <p>Custom Library</p>
             </div>
           </a>
         </div>
