Added landing page name and link to projects

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href=""
+          <a href="https://github.com/manuel12/landing-page"
             ><img src="images/landing-page.png" />
             <div class="project-name">
-              <p>Project 5</p>
+              <p>Landing Page</p>
             </div>
           </a>
         </div>
