--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href="https://github.com/manuel12/landing-page"
+          <a href="https://github.com/manuel12/technical-documentation-page"
             ><img src="images/landing-page.png" />
             <div class="project-name">
-              <p>Landing Page</p>
+              <p>Technical Documentation Page</p>
             </div>
           </a>
         </div>
         <div class="project-tile">
-          <a href=""
+          <a href="https://github.com/manuel12/landing-page"
             ><img src="images/landing-page.png" />
             <div class="project-name">
-              <p>Project 6</p>
+              <p>Landing Page</p>
             </div>
           </a>
         </div>
