Added email link

--- a/index.html
+++ b/index.html
@@ -145,9 +145,12 @@
         ></textarea>
       </form>
       <div class="icon-section">
-        <div class="icon-container">
-          <i class="fa-regular fa-envelope"></i>
-        </div>
+        <a href="mailto:manuelpinedacabeza.com">
+          <div class="icon-container">
+            <i class="fa-regular fa-envelope"></i>
+          </div>
+        </a>
+
         <div class="icon-container">
           <i class="fa-brands fa-linkedin"></i>
         </div>
