Added linkedin link

--- a/index.html
+++ b/index.html
@@ -150,10 +150,12 @@
             <i class="fa-regular fa-envelope"></i>
           </div>
         </a>
+        <a href="https://www.linkedin.com/">
+          <div class="icon-container">
+            <i class="fa-brands fa-linkedin"></i>
+          </div>
+        </a>
 
-        <div class="icon-container">
-          <i class="fa-brands fa-linkedin"></i>
-        </div>
         <div class="icon-container">
           <i class="fa-brands fa-github"></i>
         </div>
