Added github link.

--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@
             <i class="fa-brands fa-linkedin"></i>
           </div>
         </a>
-
-        <div class="icon-container">
-          <i class="fa-brands fa-github"></i>
-        </div>
+        <a href="https://github.com/manuel12">
+          <div class="icon-container">
+            <i class="fa-brands fa-github"></i>
+          </div>
+        </a>
       </div>
     </section>
     <footer>
