Add target=blank to social links

--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
         ></textarea>
       </form>
       <div class="icon-section">
-        <a href="mailto:manuelpinedacabeza.com">
+        <a href="mailto:manuelpinedacabeza.com" target="_blank">
           <div class="icon-container">
             <i class="fa-regular fa-envelope"></i>
           </div>
         </a>
-        <a href="https://www.linkedin.com/">
+        <a href="https://www.linkedin.com/" target="_blank">
           <div class="icon-container">
             <i class="fa-brands fa-linkedin"></i>
           </div>
         </a>
-        <a href="https://github.com/manuel12">
+        <a href="https://github.com/manuel12" target="_blank">
           <div class="icon-container">
             <i class="fa-brands fa-github"></i>
           </div>
