Added images and expense tracker image to project tile.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="projects-grid">
         <div class="project-tile">
           <a href="https://github.com/manuel12/django-expense-tracker-public"
-            ><img src="images/landing-page.png" />
+            ><img src="images/expense-tracker.png" />
             <div class="project-name">
               <p>Expense Tracker</p>
             </div>
