Added motivation vault image

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="project-tile">
           <a href="https://github.com/manuel12/django-api-react"
-            ><img src="images/landing-page.png" />
+            ><img src="images/motivation-vault.png" />
             <div class="project-name">
               <p>Motivation Vault</p>
             </div>
