Added images for media ratings and custom library.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="project-tile">
           <a href="https://github.com/manuel12/media-ratings"
-            ><img src="images/landing-page.png" />
+            ><img src="images/media-ratings.png" />
             <div class="project-name">
               <p>Media Ratings</p>
             </div>
@@ -103,7 +103,7 @@
         </div>
         <div class="project-tile">
           <a href="https://github.com/manuel12/css-styles-showcase"
-            ><img src="images/landing-page.png" />
+            ><img src="images/custom-library.png" />
             <div class="project-name">
               <p>Custom Library</p>
             </div>
