Added technical documentation page images

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="project-tile">
           <a href="https://github.com/manuel12/technical-documentation-page"
-            ><img src="images/landing-page.png" />
+            ><img src="images/technical-documentation-page.png" />
             <div class="project-name">
               <p>Technical Documentation Page</p>
             </div>
