Added target blank to social links.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
       <h1 class="projects-heading">My Projects</h1>
       <div class="projects-grid">
         <div class="project-tile">
-          <a href="https://github.com/manuel12/django-expense-tracker-public"
+          <a
+            href="https://github.com/manuel12/django-expense-tracker-public"
+            target="_blank"
             ><img src="images/expense-tracker.png" />
             <div class="project-name">
               <p>Expense Tracker</p>
@@ -86,7 +88,7 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href="https://github.com/manuel12/motivation-vault"
+          <a href="https://github.com/manuel12/motivation-vault" target="_blank"
             ><img src="images/motivation-vault.png" />
             <div class="project-name">
               <p>Motivation Vault</p>
@@ -94,7 +96,7 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href="https://github.com/manuel12/media-ratings"
+          <a href="https://github.com/manuel12/media-ratings" target="_blank"
             ><img src="images/media-ratings.png" />
             <div class="project-name">
               <p>Media Ratings</p>
@@ -102,7 +104,9 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href="https://github.com/manuel12/custom-css-library"
+          <a
+            href="https://github.com/manuel12/custom-css-library"
+            target="_blank"
             ><img src="images/custom-library.png" />
             <div class="project-name">
               <p>Custom Library</p>
@@ -110,7 +114,9 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href="https://github.com/manuel12/technical-documentation-page"
+          <a
+            href="https://github.com/manuel12/technical-documentation-page"
+            target="_blank"
             ><img src="images/technical-documentation-page.png" />
             <div class="project-name">
               <p>Technical Documentation Page</p>
@@ -118,7 +124,7 @@
           </a>
         </div>
         <div class="project-tile">
-          <a href="https://github.com/manuel12/landing-page"
+          <a href="https://github.com/manuel12/landing-page" target="_blank"
             ><img src="images/landing-page.png" />
             <div class="project-name">
               <p>Landing Page</p>
