Making the web mobile first

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <section id="welcome-section">
       <h1 class="about-heading">
-        Manuel Pineda<br />Front-end, Back-end & Test Developer
+        Manuel Pineda<br />Front-end,<br />Back-end & Test Developer
       </h1>
 
       <p class="about-text">
@@ -76,7 +76,7 @@
     </section>
     <section id="projects">
       <h1 class="projects-heading">My Projects</h1>
-      <div class="projects-grid">
+      <!-- <div class="projects-grid">
         <div class="project-tile">
           <a
             href="https://github.com/manuel12/django-expense-tracker-public"
@@ -131,12 +131,12 @@
             </div>
           </a>
         </div>
-      </div>
+      </div> -->
     </section>
     <section id="contact">
       <h2>Contact</h2>
       <p>Do you want to work together?</p>
-      <form>
+      <!-- <form>
         <input id="name" type="text" name="name" placeholder="Your name..." />
         <input
           id="email"
@@ -149,7 +149,7 @@
           name="message"
           placeholder="Your message..."
         ></textarea>
-      </form>
+      </form> -->
       <div class="icon-section">
         <a href="mailto:manuelpinedacabeza.com" target="_blank">
           <div class="icon-container">
