--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav id="navbar">
       <ul>
         <a href="#welcome-section">About</a>
+        <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </ul>
@@ -76,7 +77,7 @@
     </section>
     <section id="projects">
       <h1 class="projects-heading">My Projects</h1>
-      <!-- <div class="projects-grid">
+      <div class="projects-grid">
         <div class="project-tile">
           <a
             href="https://github.com/manuel12/django-expense-tracker-public"
@@ -131,10 +132,10 @@
             </div>
           </a>
         </div>
-      </div> -->
+      </div>
     </section>
     <section id="contact">
-      <h2>Contact</h2>
+      <h1>Contact</h1>
       <p>Do you want to work together?</p>
       <!-- <form>
         <input id="name" type="text" name="name" placeholder="Your name..." />
