--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <section id="contact">
       <h1>Contact</h1>
       <p>Do you want to work together?</p>
-      <!-- <form>
+      <form>
         <input id="name" type="text" name="name" placeholder="Your name..." />
         <input
           id="email"
@@ -150,7 +150,7 @@
           name="message"
           placeholder="Your message..."
         ></textarea>
-      </form> -->
+      </form>
       <div class="icon-section">
         <a href="mailto:manuelpinedacabeza.com" target="_blank">
           <div class="icon-container">
