Added a skill-card-container section.

--- a/index.html
+++ b/index.html
@@ -32,46 +32,49 @@
       </p>
     </section>
     <section id="skills">
-      <div class="skill-card">
-        <div class="skill-icon-section">
-          <i class="fa-solid fa-terminal"></i>
+      <div class="skill-card-container">
+        <div class="skill-card">
+          <div class="skill-icon-section">
+            <i class="fa-solid fa-terminal"></i>
+          </div>
+          <div class="skill-text-section">
+            <h3>Front-end</h3>
+            <p>
+              I've worked with HTML, CSS, Bootstrap, JS, React, Fontawesome and
+              other technologies. I've created both personal and certification
+              projects using all these tools. I've also created my own
+              Bootstrap-like library usingn only CSS.
+            </p>
+          </div>
         </div>
-        <div class="skill-text-section">
-          <h3>Front-end</h3>
-          <p>
-            I've worked with HTML, CSS, Bootstrap, JS, React, Fontawesome and
-            other technologies. I've created both personal and certification
-            projects using all these tools. I've also created my own
-            Bootstrap-like library usingn only CSS.
-          </p>
+        <div class="skill-card">
+          <div class="skill-icon-section">
+            <i class="fa-solid fa-terminal"></i>
+          </div>
+          <div class="skill-text-section">
+            <h3>Back-end</h3>
+            <p>
+              I've done projects in Python, Django, Django-rest-framework and
+              use these to make apps like the Expense Tracker, Motivation Vault
+              and Media Ratings.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="skill-card">
-        <div class="skill-icon-section">
-          <i class="fa-solid fa-terminal"></i>
-        </div>
-        <div class="skill-text-section">
-          <h3>Back-end</h3>
-          <p>
-            I've done projects in Python, Django, Django-rest-framework and use
-            these to make apps like the Expense Tracker, Motivation Vault and
-            Media Ratings.
-          </p>
-        </div>
-      </div>
-      <div class="skill-card">
-        <div class="skill-icon-section">
-          <i class="fa-solid fa-terminal"></i>
-        </div>
-        <div class="skill-text-section">
-          <h3>Testing</h3>
-          <p>
-            My software developement journey began with testing. I have years of
-            experience as QA of a variety of applications whether web pages, web
-            applications and video games. I have also extensive experience on
-            creating test suites for web pages and web applications, automating
-            testing processes and creating function, UI, API, and Visual tests.
-          </p>
+        <div class="skill-card">
+          <div class="skill-icon-section">
+            <i class="fa-solid fa-terminal"></i>
+          </div>
+          <div class="skill-text-section">
+            <h3>Testing</h3>
+            <p>
+              My software developement journey began with testing. I have years
+              of experience as QA of a variety of applications whether web
+              pages, web applications and video games. I have also extensive
+              experience on creating test suites for web pages and web
+              applications, automating testing processes and creating function,
+              UI, API, and Visual tests.
+            </p>
+          </div>
         </div>
       </div>
     </section>
