Added class to 2nd line break

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </nav>
     <section id="welcome-section">
       <h1 class="about-heading">
-        Manuel Pineda<br />Front-end,<br />Back-end & Test Developer
+        Manuel Pineda<br />Front-end, <br class="about-line-break" />Back-end &
+        Test Developer
       </h1>
 
       <p class="about-text">
