Added 3 new project tiles. Added containers to each section.

--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
       </ul>
     </nav>
     <section id="welcome-section">
-      <h1 class="about-heading">
-        Manuel Pineda<br />Front-end, <br class="about-line-break" />Back-end &
-        Test Developer
-      </h1>
+      <div class="about-container">
+        <h1 class="about-heading">
+          Manuel Pineda<br />Front-end, <br class="about-line-break" />Back-end
+          & Test Developer
+        </h1>
 
-      <p class="about-text">
-        Hi! I'm Manuel. How are you doing? I love all sides of programing web
-        apps, from the backend, to frontend and testing. I've done each. I
-        believe in being able to build all parts of an application in order to
-        fully understand how it works.<br /><br />In my free time I enjoy
-        reading, running and photography.
-      </p>
+        <p class="about-text">
+          Hi! I'm Manuel. How are you doing? I love all sides of programing web
+          apps, from the backend, to frontend and testing. I've done each. I
+          believe in being able to build all parts of an application in order to
+          fully understand how it works.<br /><br />In my free time I enjoy
+          reading, running and photography.
+        </p>
+      </div>
     </section>
     <section id="skills">
-      <div class="skill-card-container">
+      <div class="skills-container">
         <div class="skill-card">
           <div class="skill-icon-section">
             <i class="fa-solid fa-terminal"></i>
@@ -80,97 +82,105 @@
       </div>
     </section>
     <section id="projects">
-      <h1 class="projects-heading">My Projects</h1>
-      <div class="projects-grid">
-        <div class="project-tile">
-          <a
-            href="https://github.com/manuel12/django-expense-tracker-public"
-            target="_blank"
-            ><img src="images/expense-tracker.png" />
-            <div class="project-name">
-              <p>Expense Tracker</p>
-            </div>
-          </a>
-        </div>
-        <div class="project-tile">
-          <a href="https://github.com/manuel12/motivation-vault" target="_blank"
-            ><img src="images/motivation-vault.png" />
-            <div class="project-name">
-              <p>Motivation Vault</p>
-            </div>
-          </a>
-        </div>
-        <div class="project-tile">
-          <a href="https://github.com/manuel12/media-ratings" target="_blank"
-            ><img src="images/media-ratings.png" />
-            <div class="project-name">
-              <p>Media Ratings</p>
-            </div>
-          </a>
-        </div>
-        <div class="project-tile">
-          <a
-            href="https://github.com/manuel12/custom-css-library"
-            target="_blank"
-            ><img src="images/custom-library.png" />
-            <div class="project-name">
-              <p>Custom Library</p>
-            </div>
-          </a>
-        </div>
-        <div class="project-tile">
-          <a
-            href="https://github.com/manuel12/technical-documentation-page"
-            target="_blank"
-            ><img src="images/technical-documentation-page.png" />
-            <div class="project-name">
-              <p>Technical Documentation Page</p>
-            </div>
-          </a>
-        </div>
-        <div class="project-tile">
-          <a href="https://github.com/manuel12/landing-page" target="_blank"
-            ><img src="images/landing-page.png" />
-            <div class="project-name">
-              <p>Landing Page</p>
-            </div>
-          </a>
+      <div class="projects-container">
+        <h1 class="projects-heading">My Projects</h1>
+        <div class="projects-grid">
+          <div class="project-tile">
+            <a
+              href="https://github.com/manuel12/django-expense-tracker-public"
+              target="_blank"
+              ><img src="images/expense-tracker.png" />
+            </a>
+          </div>
+          <div class="project-tile">
+            <a
+              href="https://github.com/manuel12/motivation-vault"
+              target="_blank"
+              ><img src="images/motivation-vault.png" />
+            </a>
+          </div>
+          <div class="project-tile">
+            <a href="https://github.com/manuel12/media-ratings" target="_blank"
+              ><img src="images/media-ratings.png" />
+            </a>
+          </div>
+          <div class="project-tile">
+            <a
+              href="https://github.com/manuel12/custom-css-library"
+              target="_blank"
+              ><img src="images/custom-library.png" />
+            </a>
+          </div>
+          <div class="project-tile">
+            <a
+              href="https://github.com/manuel12/technical-documentation-page"
+              target="_blank"
+              ><img src="images/technical-documentation-page.png" />
+            </a>
+          </div>
+          <div class="project-tile">
+            <a href="https://github.com/manuel12/landing-page" target="_blank"
+              ><img src="images/landing-page.png" />
+            </a>
+          </div>
+
+          <div class="project-tile">
+            <a href="https://github.com/manuel12/quote-project" target="_blank"
+              ><img src="images/random-quote-generator.png" />
+            </a>
+          </div>
+
+          <div class="project-tile">
+            <a
+              href="https://github.com/manuel12/25-plus-5-clock"
+              target="_blank"
+              ><img src="images/25_plus_5_clock.png" />
+            </a>
+          </div>
+
+          <div class="project-tile">
+            <a href="https://github.com/manuel12/js-calculator" target="_blank"
+              ><img src="images/js-calculator.png" />
+            </a>
+          </div>
         </div>
       </div>
     </section>
     <section id="contact">
-      <h1>Contact</h1>
-      <p>Do you want to work together?</p>
-      <form>
-        <input id="name" type="text" name="name" placeholder="Your name..." />
-        <input
-          id="email"
-          type="email"
-          name="email"
-          placeholder="Your email..."
-        />
-        <textarea
-          id="message"
-          name="message"
-          placeholder="Your message..."
-        ></textarea>
-      </form>
-      <div class="icon-section">
-        <a href="mailto:manuelpinedacabeza.com" target="_blank">
-          <div class="icon-container">
-            <i class="fa-regular fa-envelope"></i>
-          </div>
-        </a>
-        <a href="https://www.linkedin.com/" target="_blank">
-          <div class="icon-container">
-            <i class="fa-brands fa-linkedin"></i>
-          </div>
-        </a>
-        <a href="https://github.com/manuel12" target="_blank">
-          <div class="icon-container">
-            <i class="fa-brands fa-github"></i>
-          </div>
-        </a>
+      <div class="contact-container">
+        <h1>Contact</h1>
+        <p>Do you want to work together?</p>
+        <form>
+          <input id="name" type="text" name="name" placeholder="Your name..." />
+          <input
+            id="email"
+            type="email"
+            name="email"
+            placeholder="Your email..."
+          />
+          <textarea
+            id="message"
+            name="message"
+            placeholder="Your message..."
+          ></textarea>
+        </form>
+        <div class="icon-section">
+          <a href="mailto:manuelpinedacabeza.com" target="_blank">
+            <div class="icon-container">
+              <i class="fa-regular fa-envelope"></i>
+            </div>
+          </a>
+          <a href="https://www.linkedin.com/" target="_blank">
+            <div class="icon-container">
+              <i class="fa-brands fa-linkedin"></i>
+            </div>
+          </a>
+          <a href="https://github.com/manuel12" target="_blank">
+            <div class="icon-container">
+              <i class="fa-brands fa-github"></i>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
     <footer>
