Added skills-heading, and skill-list-section to each card.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/d0731b8ace.js"
       crossorigin="anonymous"
     ></script>
+    <title>Manuel Pineda</title>
   </head>
   <body>
     <nav id="navbar">
@@ -35,6 +36,7 @@
       </div>
     </section>
     <section id="skills">
+      <h1 class="skills-heading">Skills</h1>
       <div class="skills-container">
         <div class="skill-card">
           <div class="skill-icon-section">
@@ -49,6 +51,10 @@
               Bootstrap-like library usingn only CSS.
             </p>
           </div>
+          <div class="skill-list-section">
+            <h3>Technologies used:</h3>
+            <p>HTML, CSS, Bootstrap, JS, React, Font Awesome, ChartJS</p>
+          </div>
         </div>
         <div class="skill-card">
           <div class="skill-icon-section">
@@ -61,6 +67,10 @@
               use these to make apps like the Expense Tracker, Motivation Vault
               and Media Ratings.
             </p>
+          </div>
+          <div class="skill-list-section">
+            <h3>Technologies used:</h3>
+            <p>Python, Django, DRF</p>
           </div>
         </div>
         <div class="skill-card">
@@ -77,6 +87,10 @@
               applications, automating testing processes and creating function,
               UI, API, and Visual tests.
             </p>
+          </div>
+          <div class="skill-list-section">
+            <h3>Technologies used:</h3>
+            <p>JS, Cypress, Cypress Image Snapshot</p>
           </div>
         </div>
       </div>
@@ -170,7 +184,7 @@
               <i class="fa-regular fa-envelope"></i>
             </div>
           </a>
-          <a href="https://www.linkedin.com/" target="_blank">
+          <a href="https://www.linkedin.com/" id="profile-link" target="_blank">
             <div class="icon-container">
               <i class="fa-brands fa-linkedin"></i>
             </div>
@@ -183,10 +197,5 @@
         </div>
       </div>
     </section>
-    <footer>
-      <a id="profile-link" target="_blank" href="https://github.com/manuel12"
-        >Github Profile</a
-      >
-    </footer>
   </body>
 </html>
