Added skill-icon-container to skill-cards

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       <div class="skills-container">
         <div class="skill-card">
           <div class="skill-icon-section">
-            <i class="fa-solid fa-terminal"></i>
+            <div class="skill-icon-container">
+              <i class="fa-solid fa-terminal"></i>
+            </div>
           </div>
           <div class="skill-text-section">
             <h3>Front-end</h3>
@@ -58,7 +60,9 @@
         </div>
         <div class="skill-card">
           <div class="skill-icon-section">
-            <i class="fa-solid fa-terminal"></i>
+            <div class="skill-icon-container">
+              <i class="fa-solid fa-terminal"></i>
+            </div>
           </div>
           <div class="skill-text-section">
             <h3>Back-end</h3>
@@ -75,7 +79,9 @@
         </div>
         <div class="skill-card">
           <div class="skill-icon-section">
-            <i class="fa-solid fa-terminal"></i>
+            <div class="skill-icon-container">
+              <i class="fa-solid fa-terminal"></i>
+            </div>
           </div>
           <div class="skill-text-section">
             <h3>Testing</h3>
