--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
     <nav id="navbar">
       <ul>
-        <a href="#welcome-section">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#welcome-section">ABOUT</a>
+        <a href="#skills">SKILLS</a>
+        <a href="#projects">PROJECTS</a>
+        <a href="#contact">CONTACT</a>
       </ul>
     </nav>
     <section id="welcome-section">
@@ -47,15 +47,13 @@
           <div class="skill-text-section">
             <h3>Front-end</h3>
             <p>
-              I've worked with HTML, CSS, Bootstrap, JS, React, Fontawesome and
-              other technologies. I've created both personal and certification
+              I've worked with <span>HTML</span>, <span>CSS</span>,
+              <span>Bootstrap</span>, <span>React</span>,
+              <span>Font Awesome</span>, <span>ChartJS</span> and other
+              technologies. I've created both personal and certification
               projects using all these tools. I've also created my own
-              Bootstrap-like library usingn only CSS.
+              Bootstrap-like library using only CSS.
             </p>
-          </div>
-          <div class="skill-list-section">
-            <h3>Technologies used:</h3>
-            <p>HTML, CSS, Bootstrap, JS, React, Font Awesome, ChartJS</p>
           </div>
         </div>
         <div class="skill-card">
@@ -67,14 +65,10 @@
           <div class="skill-text-section">
             <h3>Back-end</h3>
             <p>
-              I've done projects in Python, Django, Django-rest-framework and
-              use these to make apps like the Expense Tracker, Motivation Vault
-              and Media Ratings.
+              I've done projects in <span>Python</span>, <span>Django</span> and
+              <span>DRF</span> and use these to make apps like the Expense
+              Tracker, Motivation Vault and Media Ratings.
             </p>
-          </div>
-          <div class="skill-list-section">
-            <h3>Technologies used:</h3>
-            <p>Python, Django, DRF</p>
           </div>
         </div>
         <div class="skill-card">
@@ -91,12 +85,10 @@
               pages, web applications and video games. I have also extensive
               experience on creating test suites for web pages and web
               applications, automating testing processes and creating function,
-              UI, API, and Visual tests.
+              UI, API, and Visual tests. For this I currently use
+              <span>JS</span>, <span>Cypress</span> and
+              <span>Cypress Image Snapshot</span>
             </p>
-          </div>
-          <div class="skill-list-section">
-            <h3>Technologies used:</h3>
-            <p>JS, Cypress, Cypress Image Snapshot</p>
           </div>
         </div>
       </div>
@@ -183,6 +175,7 @@
             name="message"
             placeholder="Your message..."
           ></textarea>
+          <input type="submit" class="submit-btn" />
         </form>
         <div class="icon-section">
           <a href="mailto:manuelpinedacabeza.com" target="_blank">
