Updated line breaks on text. Added period at the end of text.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
         <p class="about-text">
           Hi! I'm Manuel. How are you doing? I love all sides of programing web
-          apps, from the backend, to frontend and testing. I've done each. I
-          believe in being able to build all parts of an application in order to
-          fully understand how it works.<br /><br />In my free time I enjoy
-          reading, running and photography.
+          apps, from the backend, to frontend and testing.<br />
+          I've done each. I believe in being able to build all parts of an
+          application in order to fully understand how it works.<br /><br />
+          In my free time I enjoy reading, running and photography.
         </p>
       </div>
     </section>
@@ -87,7 +87,7 @@
               applications, automating testing processes and creating function,
               UI, API, and Visual tests. For this I currently use
               <span>JS</span>, <span>Cypress</span> and
-              <span>Cypress Image Snapshot</span>
+              <span>Cypress Image Snapshot</span>.
             </p>
           </div>
         </div>
