--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="skill-text-section">
-            <h3>Front-end</h3>
+            <h2>Front-end</h2>
             <p>
               I've worked with <span>HTML</span>, <span>CSS</span>,
               <span>Bootstrap</span>, <span>React</span>,
@@ -63,7 +63,7 @@
             </div>
           </div>
           <div class="skill-text-section">
-            <h3>Back-end</h3>
+            <h2>Back-end</h2>
             <p>
               I've done projects in <span>Python</span>, <span>Django</span> and
               <span>DRF</span> and use these to make apps like the Expense
@@ -78,7 +78,7 @@
             </div>
           </div>
           <div class="skill-text-section">
-            <h3>Testing</h3>
+            <h2>Tests</h2>
             <p>
               My software developement journey began with testing. I have years
               of experience as QA of a variety of applications whether web
