Added skills-heading inside skills-container and added skill-cards inside skill-card-container

--- a/index.html
+++ b/index.html
@@ -36,59 +36,62 @@
       </div>
     </section>
     <section id="skills">
-      <h1 class="skills-heading">Skills</h1>
       <div class="skills-container">
-        <div class="skill-card">
-          <div class="skill-icon-section">
-            <div class="skill-icon-container">
-              <i class="fa-solid fa-terminal"></i>
+        <h1 class="skills-heading">Skills</h1>
+        <div class="skill-card-container">
+          <div class="skill-card">
+            <div class="skill-icon-section">
+              <div class="skill-icon-container">
+                <i class="fa-solid fa-terminal"></i>
+              </div>
+            </div>
+            <div class="skill-text-section">
+              <h2>Front-end</h2>
+              <p>
+                I've worked with <span>HTML</span>, <span>CSS</span>,
+                <span>Bootstrap</span>, <span>React</span>,
+                <span>Font Awesome</span>, <span>ChartJS</span> and other
+                technologies. I've created both personal and certification
+                projects using all these tools. I've also created my own
+                Bootstrap-like library using only CSS.
+              </p>
             </div>
           </div>
-          <div class="skill-text-section">
-            <h2>Front-end</h2>
-            <p>
-              I've worked with <span>HTML</span>, <span>CSS</span>,
-              <span>Bootstrap</span>, <span>React</span>,
-              <span>Font Awesome</span>, <span>ChartJS</span> and other
-              technologies. I've created both personal and certification
-              projects using all these tools. I've also created my own
-              Bootstrap-like library using only CSS.
-            </p>
-          </div>
-        </div>
-        <div class="skill-card">
-          <div class="skill-icon-section">
-            <div class="skill-icon-container">
-              <i class="fa-solid fa-terminal"></i>
+          <div class="skill-card">
+            <div class="skill-icon-section">
+              <div class="skill-icon-container">
+                <i class="fa-solid fa-terminal"></i>
+              </div>
+            </div>
+            <div class="skill-text-section">
+              <h2>Back-end</h2>
+              <p>
+                I've done projects in <span>Python</span>,
+                <span>Django</span> and <span>DRF</span> and use these to make
+                apps like the Expense Tracker, Motivation Vault and Media
+                Ratings.
+              </p>
             </div>
           </div>
-          <div class="skill-text-section">
-            <h2>Back-end</h2>
-            <p>
-              I've done projects in <span>Python</span>, <span>Django</span> and
-              <span>DRF</span> and use these to make apps like the Expense
-              Tracker, Motivation Vault and Media Ratings.
-            </p>
-          </div>
-        </div>
-        <div class="skill-card">
-          <div class="skill-icon-section">
-            <div class="skill-icon-container">
-              <i class="fa-solid fa-terminal"></i>
+          <div class="skill-card">
+            <div class="skill-icon-section">
+              <div class="skill-icon-container">
+                <i class="fa-solid fa-terminal"></i>
+              </div>
             </div>
-          </div>
-          <div class="skill-text-section">
-            <h2>Tests</h2>
-            <p>
-              My software developement journey began with testing. I have years
-              of experience as QA of a variety of applications whether web
-              pages, web applications and video games. I have also extensive
-              experience on creating test suites for web pages and web
-              applications, automating testing processes and creating function,
-              UI, API, and Visual tests. For this I currently use
-              <span>JS</span>, <span>Cypress</span> and
-              <span>Cypress Image Snapshot</span>.
-            </p>
+            <div class="skill-text-section">
+              <h2>Tests</h2>
+              <p>
+                My software developement journey began with testing. I have
+                years of experience as QA of a variety of applications whether
+                web pages, web applications and video games. I have also
+                extensive experience on creating test suites for web pages and
+                web applications, automating testing processes and creating
+                function, UI, API, and Visual tests. For this I currently use
+                <span>JS</span>, <span>Cypress</span> and
+                <span>Cypress Image Snapshot</span>.
+              </p>
+            </div>
           </div>
         </div>
       </div>
