Updated skill icons.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="skill-card">
             <div class="skill-icon-section">
               <div class="skill-icon-container">
-                <i class="fa-solid fa-terminal"></i>
+                <i class="fa-solid fa-laptop-code"></i>
               </div>
             </div>
             <div class="skill-text-section">
@@ -60,7 +60,7 @@
           <div class="skill-card">
             <div class="skill-icon-section">
               <div class="skill-icon-container">
-                <i class="fa-solid fa-terminal"></i>
+                <i class="fa-solid fa-gears"></i>
               </div>
             </div>
             <div class="skill-text-section">
@@ -76,7 +76,7 @@
           <div class="skill-card">
             <div class="skill-icon-section">
               <div class="skill-icon-container">
-                <i class="fa-solid fa-terminal"></i>
+                <i class="fa-solid fa-bug"></i>
               </div>
             </div>
             <div class="skill-text-section">
