Added hamburger button.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <nav id="navbar">
+      <button id="hamburger-btn">
+        <i class="fa-solid fa-bars"></i>
+      </button>
       <ul>
         <a href="#welcome-section">ABOUT</a>
         <a href="#skills">SKILLS</a>
