--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button id="hamburger-btn">
         <i class="fa-solid fa-bars"></i>
       </button>
-      <ul>
+      <ul class="navbar-list">
         <a href="#welcome-section">ABOUT</a>
         <a href="#skills">SKILLS</a>
         <a href="#projects">PROJECTS</a>
@@ -202,5 +202,21 @@
         </div>
       </div>
     </section>
+    <script>
+      const hamburgerBtn = document.getElementById("hamburger-btn");
+      hamburgerBtn.onclick = () => {
+        const navbarListElem =
+          document.getElementsByClassName("navbar-list")[0];
+        const currentlyOpened =
+          navbarListElem.classList.value.includes("opened");
+        if (currentlyOpened) {
+          navbarListElem.classList.remove("navbar-list-opened");
+          navbarListElem.classList.add("navbar-list-closed");
+        } else {
+          navbarListElem.classList.add("navbar-list-opened");
+          navbarListElem.classList.remove("navbar-list-closed");
+        }
+      };
+    </script>
   </body>
 </html>
